kubernetes/opentracing/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: quarkus-app
  name: quarkus-app
spec:
  ports:
  - name: 8081-8081
    port: 8081
    protocol: TCP
    targetPort: 8081
  selector:
    app: quarkus-app
  type: ClusterIP
status:
  loadBalancer: {}
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: spring-app
  name: spring-app
spec:
  ports:
  - name: 8082-8082
    port: 8082
    protocol: TCP
    targetPort: 8082
  selector:
    app: spring-app
  type: ClusterIP
status:
  loadBalancer: {}
